--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-{
-  "language": "node_js",
-  "node_js": "6",
-  "group": "stable",
-  "dist": "trusty",
-  "os": "linux"
-}
+language: node_js
+node_js:
+  - "6"
